# sqlx-plus

./: .gitignore  CRUD_BUILDER_DESIGN.md  Cargo.toml  QUERY_BUILDER_ANALYSIS.md  README.md  REFACTOR_CRUD_TO_GENERIC.md  readme.md
cli/: Cargo.toml  README.md
cli/src/: database.rs  generator.rs  main.rs  sql_generator.rs
core/: Cargo.toml  README.md
core/src/: crud.rs  database_info.rs  database_type.rs  db_pool.rs  error.rs  executor.rs  lib.rs  macros_api.rs  query_builder.rs  traits.rs  transaction.rs  utils.rs
core/src/builder/: delete_builder.rs  insert_builder.rs  mod.rs  query_builder.rs  update_builder.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/mysql_example/: Cargo.toml
examples/mysql_example/src/: main.rs
examples/postgres_example/: Cargo.toml
examples/postgres_example/src/: main.rs
examples/sqlite_example/: Cargo.toml
examples/sqlite_example/src/: main.rs
examples/test_models/: Cargo.toml
examples/test_models/sql/: user2_mysql.sql  user2_postgres.sql  user2_sqlite.sql  user_mysql.sql  user_postgres.sql  user_sqlite.sql
examples/test_models/src/: lib.rs  mod.rs  user.rs  user2.rs  user_gen.rs
