[package]
name = "sqlxplus-cli"
version = "0.1.4"
edition = "2021"
authors = ["fangbc5@163.com"]
license = "MIT OR Apache-2.0"
description = "Code generator for sqlxplus"
repository = "https://github.com/fangbc5/sqlx-plus"
keywords = ["sqlx", "database", "code-generator", "cli", "codegen"]
categories = ["database", "development-tools", "web-programming"]
readme = "README.md"

[[bin]]
name = "sqlxplus-cli"
path = "src/main.rs"

[dependencies]
sqlx = { workspace = true, features = ["mysql", "postgres", "sqlite", "derive"] }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dialoguer = "0.11"
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"

