[package]
name = "sqlxplus"
version = "0.1.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "A powerful SQL query builder and ORM for sqlx with CRUD operations"
repository = "https://github.com/fangbc5/sqlx-plus"
keywords = ["sqlx", "orm", "database", "query-builder", "crud"]
categories = ["database", "web-programming"]

[dependencies]
sqlx = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
# 引入 derive 包，以便重新导出宏
# 本地开发时使用 path，发布到 crates.io 时使用版本号
sqlxplus-derive = { version = "0.1.5", path = "../derive" }

[features]
default = ["mysql", "postgres", "sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

