[package]
name = "sqlxplus-derive"
version = "0.1.9"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Proc-macro derives for sqlxplus"
repository = "https://github.com/fangbc5/sqlx-plus"
keywords = ["sqlx", "orm", "database", "proc-macro", "derive"]
categories = ["database", "web-programming"]

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true


