[package]
name = "mysql-example"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx-plus-core = { path = "../../core", features = ["mysql"] }
sqlx-plus-derive = { path = "../../derive" }
async-trait = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "chrono", "mysql"] }
tokio = { version = "1.40", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0"

