[package]
name = "sqlite-example"
version.workspace = true
edition.workspace = true

[dependencies]
# 只依赖 sqlx-plus-core，它会自动传递 sqlx-plus-derive 并重新导出宏
sqlxplus = { path = "../../core", features = ["sqlite"] }
async-trait = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "chrono", "sqlite"] }
tokio = { version = "1.40", features = ["full"] }
dotenvy = "0.15"
anyhow = "1.0"

