[package]
name = "test_models"
version.workspace = true
edition.workspace = true

[features]
default = ["mysql", "postgres", "sqlite"]
mysql = []
postgres = []
sqlite = []

[dependencies]
sqlxplus = { path = "../../core", default-features = false, features = ["mysql", "postgres", "sqlite"] }
async-trait = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "chrono", "sqlite", "mysql", "postgres"] }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = "1.9"


