[package]
name = "test_models"
version.workspace = true
edition.workspace = true

[features]
default = ["mysql", "postgres", "sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
sqlxplus = { path = "../../core" }
async-trait = { workspace = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "chrono", "bigdecimal", "derive"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { workspace = true }
uuid = "1.9"


